--- a/walentynka.html
+++ b/walentynka.html
@@ -140,7 +140,7 @@
         gifEl.alt = "Całujące się misie";
 
         titleEl.className = "finalTitle";
-        titleEl.textContent = "WOOOOOO!!! Kocham Cię, skarbie!! :))";
+        titleEl.textContent = "Teraz oficjalnie należysz do mnie 😌❤️";
 
         actionsEl.style.display = "none";
         return;
